--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src = "main.js" type = "text/javascript"></script>
+    <script src = "test.js" type = "text/javascript"></script>
     <meta charset="UTF-8">
     <title>My form</title>
 </head>
@@ -16,6 +19,10 @@
             <input type="email" id="email" name="email"><br>
             <label for="phone">Phone</label>
             <input type="text" id="phone" name="phone"><br>
+            <label for="zip">Zip code</label>
+            <input type="text" id="zip" name="zip"><br>
+            <label for="city">City</label>
+            <input type="text" id="city" name="city"><br>
             <button type="submit" name="submit" id="submit" value="Register">Register</button>
         </fieldset>
     </form>
