--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="papaparse.min.js" type="text/javascript"></script>
     <script src = "main.js" type = "text/javascript"></script>
     <script src = "test.js" type = "text/javascript"></script>
     <meta charset="UTF-8">
