--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <input type="text" id="name" name="name"><br>
             <label for="password">Password</label>
             <input type="password" id="password" name="password"><br>
+            <div id="passValidation"></div>
             <label for="email">E-mail</label>
             <input type="email" id="email" name="email"><br>
             <label for="phone">Phone</label>
